tests/paczka2/big_fuzzy/89155535.err
Error in line 1: 1Og1 A680 98,38
Error in line 3: h6Pa A900 88,7
Error in line 24: h6Pa S377 29,8
Error in line 55: 1Og1 A900 84,8
Error in line 58: S377 A900 91,7
Error in line 63: Un}Xb S}77 241,6
Error in line 61: cZcar A900 33,3
Error in line 75: h6Pa A900 51,7
Error in line 78: LEZzcRm0H A680 29,0
Error in line 84: LEZzcRm0H S377 40,9
Error in line 86: 1Og1 A900 53,6
Error in line 93: S377 S377 28,0
Error in line 99: h6Pa S422 13,2
Error in line 103: aEOrcq S377 85,5
Error in line 46: Un3Xb S377 76,7
Error in line 104: aEOrcq A900 21,0
Error in line 119: aEOrcq S377 -2,2
Error in line 113: Un3Xb A680 5,7
Error in line 117: aEOrcq S377 60,3
Error in line 123: aEOrcq S422 28,3
Error in line 130: 1Og1 A680 50,0
Error in line 136: S377 A900 9,9
Error in line 132: cZcar A900 83,6
Error in line 155: 1Og1 A900 10,8
Error in line 152: h6Pa A900 72,9
Error in line 154: cZcar S377 4,9
Error in line 173: cZcar A900 97,1
Error in line 178: aEOrcq S422 61,0
Error in line 186: LEZzcRm0H A900 78,8
Error in line 196: Un3Xb A680 32,4
Error in line 212: 1Og1 A900 13,0
Error in line 225: 1Og1 S422 78,1
Error in line 234: h6Pa A680 68,6
Error in line 235: h6Pa S377 5,0
Error in line 244: cZcar A900 83,3
